<resources>
    <string name="app_name" translatable="false">OptymoNext</string>

    <string name="app_name_loading" translatable="false">ptymoNext</string>
    <string name="splash_error_loading_text">Error loading network</string>
    <string name="splash_generating_xml">Generating network from XML</string>
    <string name="splash_json_loading_text">Loading network from JSON</string>
    <string name="splash_loading_line">loading line %1$d/%2$d</string>
    <string name="splash_loading_stop">Chargement stop %1$d/%2$d</string>

    <string name="favorites">Favorites</string>

    <string name="add_step_1">1. Choose a line</string>
    <string name="add_step_2">2. Choose a stop</string>
    <string name="add_button_text">ADD</string>

    <string name="main_all_stops">All stops</string>
    <string name="content_description_background">Superb background</string>
    <string name="icon_app_description">Icon app</string>
    <string name="search_icon_description">Search icon</string>
    <string name="add_fav_title">Add favorite</string>
    <string name="splash_loading_network">Loading network</string>
    <string name="splash_error_text">error: \"%1$s\"</string>
    <string name="splash_favorite_loading">Loading favorite %1$d/%2$d</string>
    <string name="update_last">Updated at %1$s</string>
    <string name="update_never">Never updated</string>
    <string name="splash_generating_stop">Generating stop from point %1$d/%2$d</string>
    <string name="main_toast_loading_favorites">Loading favorites…</string>
    <string name="add_fav_toast_nb_of_fav">%1$d favorites now</string>
    <string name="dialog_del_fav_title">Confirm deletion</string>
    <string name="dialog_del_fav_message">Delete favorite: %1$s?</string>
    <string name="dialog_yes">yes</string>
    <string name="dialog_no">no</string>
    <string name="notification_refresh_button_text">Refresh</string>
    <string name="notification_content_text">Expand to see favorites</string>
    <string name="update_pending">Updating…</string>
    <string name="dialog_search_input_hint">Search stop, line…</string>
    <string name="stops">Stops</string>
    <string name="stop_next_stops">Next stops</string>
    <string name="stop_toast_loading_stop">Loading next times…</string>
    <string name="notification_others_button_text">Others</string>
    <string name="map_title">Map</string>
    <string name="main_line_pdf_title">Lines PDFs</string>
    <string name="lines">Lines</string>
    <string name="main_made_by_text">App made by TheRolf</string>
    <string name="main_made_by_website" translatable="false">https://therolf.fr</string>
    <string name="dialog_download_pdf_content">We didn\'t find any PDF viewer. Do you want to download it?</string>
    <string name="dialog_download_pdf_title">No PDF viewer found</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="error_occured">An error occurred. Please try later.</string>
    <string name="dialog_search_no_results_found">No result found…</string>
    <string name="refresh_icon_desc" translatable="false">refresh icon</string>
    <string name="main_press_long">Long press to delete favorite</string>
    <string name="permission_message">Your location is required to show you where you are.</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_required">Permission required</string>
    <string name="dialog_ok" translatable="false">OK</string>
    <string name="main_traffic_info">Traffic infos</string>
    <string name="arrow_expandable_list" translatable="false">arrow expandable list</string>
    <string name="no_favorites">No favorites</string>
    <string name="content_description" translatable="false">this is a description</string>
    <string name="main_traffic_info_more_infos">More infos</string>
    <string name="main_authorize_notification">Show the notification with upcoming buses</string>
    <string name="map_more_infos">Tap on me to get next times</string>
    <string name="main_lines_pdf_static">Static URLs of %1$s</string>
    <string name="main_lines_pdf_dynamic">Latest PDFs online</string>
    <string name="main_lines_pdf_loading">Loading…</string>
    <string name="notification_channel_title">Next stops</string>
    <string name="notification_channel_description">Persistent notification with next stops</string>
    <string name="main_traffic_info_lines_prefix">Lines: %1$s</string>
    <string name="main_traffic_info_date_from">From %1$s</string>
    <string name="main_traffic_info_date_from_to">From %1$s to %2$s</string>
    <string name="main_traffic_info_date_same_day">The %1$s</string>
</resources>
