<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/colorBackground"
    tools:context=".controller.activities.Main.MainActivity">

    <ImageView
        android:id="@+id/top_bg_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/content_description_background"
        android:cropToPadding="false"
        android:maxHeight="@dimen/top_part_max_height"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/top_background" />

    <ImageView
        android:id="@+id/top_logo_icon"
        android:layout_width="@dimen/logo_icon_size"
        android:layout_height="@dimen/logo_icon_size"
        android:layout_margin="@dimen/padding_app"
        android:contentDescription="@string/icon_app_description"
        app:srcCompat="@drawable/ic_logo_form" />

    <ImageView
        android:id="@+id/top_search_icon"
        android:layout_width="@dimen/search_icon_size"
        android:layout_height="@dimen/logo_icon_size"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/padding_app"
        android:contentDescription="@string/search_icon_description"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_search" />

    <ImageView
        android:id="@+id/top_close_icon"
        android:layout_width="@dimen/search_icon_size"
        android:layout_height="@dimen/logo_icon_size"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/padding_app"
        android:contentDescription="@string/search_icon_description"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_close_icon" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>