<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".controller.activities.FavoritesActivity">

    <TextView
        android:id="@+id/add_favorite_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_favorite"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="Add favorite" />

    <TextView
        android:id="@+id/add_step1_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_step_1"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:text="1. choose a Line" />

    <Spinner
        android:id="@+id/add_stop_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog" />

    <TextView
        android:id="@+id/add_step2_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_step_2"
        android:textColor="#000000"
        android:textSize="16sp"
        tools:text="2. Choose a stop" />

    <Spinner
        android:id="@+id/add_direction_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        android:textColor="@android:color/black"
        tools:text="ADD" />
</LinearLayout>
