<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".controller.activities.Main.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:orientation="vertical">

        <include
            android:id="@+id/top_part"
            layout="@layout/top_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_part_height_no_padding"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_app"
            android:paddingEnd="@dimen/padding_app"
            android:paddingBottom="@dimen/padding_app">

            <TextView
                android:id="@+id/main_favorite_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottom_title_margin"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/app_name"
                android:textColor="@color/colorOnPrimary"
                android:textSize="@dimen/title_font_size" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_vertical_margin"
                android:background="@color/elementBackground"
                app:cardCornerRadius="@dimen/component_border_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/component_padding"
                    android:paddingBottom="@dimen/component_padding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/component_padding"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/component_padding"
                        android:paddingEnd="@dimen/component_padding">

                        <ImageButton
                            android:id="@+id/main_refresh_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/refresh_icon_desc"
                            app:srcCompat="@drawable/ic_refresh_red"
                            tools:ignore="VectorDrawableCompat" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="12"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/main__favorites_title"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito_bold"
                                android:text="@string/favorites"
                                android:textAlignment="center"
                                android:textColor="@color/colorPrimaryOnElement"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/main_favorites_last_update_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/nunito_semibold"
                                android:text="@string/update_never"
                                android:textAlignment="center"
                                android:textColor="@color/colorPrimaryOnElement" />
                        </LinearLayout>

                        <ImageButton
                            android:id="@+id/main_add_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:adjustViewBounds="true"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/add_fav_title"
                            app:srcCompat="@drawable/ic_add_red"
                            tools:ignore="VectorDrawableCompat" />

                    </LinearLayout>

                    <ListView
                        android:id="@+id/main_favorite_next_stops"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:elevation="6dp"
                        android:minWidth="100dp"
                        android:nestedScrollingEnabled="true"
                        android:padding="0dp"
                        tools:ignore="UnusedAttribute">

                    </ListView>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/component_padding_half"
                        android:layout_marginBottom="@dimen/component_padding_half"
                        android:fontFamily="@font/nunito_italic"
                        android:paddingStart="@dimen/component_padding"
                        android:paddingEnd="@dimen/component_padding"
                        android:text="@string/main_press_long"
                        android:textAlignment="center"
                        android:textColor="@color/colorLightGraySearch" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_vertical_margin"
                android:background="@color/elementBackground"
                app:cardCornerRadius="@dimen/component_border_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/component_padding"
                    android:paddingBottom="@dimen/component_padding_half">

                    <TextView
                        android:id="@+id/main_lines_pdf_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/component_padding_half"
                        android:fontFamily="@font/nunito_bold"
                        android:paddingStart="@dimen/component_padding"
                        android:paddingEnd="@dimen/component_padding"
                        android:text="@string/main_line_pdf_title"
                        android:textColor="@color/colorPrimaryOnElement"
                        android:textSize="20sp" />

                    <com.therolf.optymoNext.vue.MyGridView
                        android:id="@+id/main_lines_pdf_gridview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/element_background"
                        android:numColumns="4"
                        android:paddingStart="@dimen/component_padding"
                        android:paddingEnd="@dimen/component_padding"
                        android:paddingBottom="@dimen/component_padding_half">

                    </com.therolf.optymoNext.vue.MyGridView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/component_vertical_margin"
                android:background="@color/elementBackground"
                app:cardCornerRadius="@dimen/component_border_radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/component_padding"
                    android:paddingBottom="@dimen/component_padding">

                    <ExpandableListView
                        android:id="@+id/main_traffic_info_listview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:divider="@null"
                        android:groupIndicator="@null" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/main_made_by"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/nunito_bold"
                android:gravity="left|center_vertical"
                android:textSize="18sp"
                tools:ignore="RtlHardcoded"
                tools:text="Sample Text" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>